--- a/style.css
+++ b/style.css
@@ -503,8 +503,8 @@ input[type=text] {
 }
 
 #prc_text .now-0 {
-    background-color: "@border";
-    outline: 1px "@text_dark" solid !important
+    background-color: "@text_2dark";
+    transform: scale(0.8, 0.8) !important;
 }
 
 #prc_text *[isspace=true]:not([class=err-0]) {
