--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/*
+    background_dark: "@background_dark"
+    background_2dark: "@background_2dark"
+    border: "@border"
+    strong: "@strong"
+    text_dark: "@text_dark"
+    text_2dark: "@text_2dark"
+    error: "@error"
+    text: "@text"
+    background: "@background"
+*/
+
 #loading {
     display: none
 }
@@ -54,7 +66,6 @@ footer {
 .container {
     width: 100%;
     max-width: 1080px;
-    padding: 1em 0;
     margin-right: auto;
     margin-left: auto
 }
@@ -226,6 +237,10 @@ textarea:focus {
 
 #prc {
     overflow: visible
+}
+
+#prc_state{
+    padding-top: 2em;
 }
 
 #prc_main * {
@@ -676,4 +691,16 @@ input[type=text] {
 
 .bd-r {
     border-right-width: 1px;
+}
+
+.bd-gradient-u {
+    border-image: -webkit-linear-gradient("@background", "@border") 10;
+    border-image: -moz-linear-gradient("@background", "@border") 10;
+    border-image: linear-gradient("@background", "@border") 10;
+}
+
+.bd-gradient-d {
+    border-image: -webkit-linear-gradient("@border", "@background") 10;
+    border-image: -moz-linear-gradient("@border", "@background") 10;
+    border-image: linear-gradient("@border", "@background") 10;
 }
