improved cursor style in chart

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ textarea:focus {
     width: 1050px;
     height: 200px;
     border: 0;
-    cursor: crosshair;
+    cursor: none;
 }
 
 #info {
